--- a/ibaraki/src/App.css
+++ b/ibaraki/src/App.css
@@ -243,9 +243,10 @@ img {
 /*Countdown*/
 .countdown {
 	position: absolute;
-	bottom: 150px;
+	bottom: 100px;
 	right: 5%;
 	width: 300px;
+	z-index: 2;
 }
 
 .numbers-countdown {
@@ -392,7 +393,7 @@ footer {
 
 	.text-countdown {
 		color: #f2f4ea;
-		font-size: 1rem;
+		font-size: 0.8rem;
 		position: relative;
 		top: 10px;
 	}
